# CSC_4IG01_TP---Interactive-3D-Application-Development

./: .gitignore  CMakeLists.txt  camera.cpp  camera.h  fragmentShader.glsl  main.cpp  mesh.cpp  mesh.h  tpOpenGL  vertexShader.glsl
